# observable-decisions

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_DOCS.md  index.html  next.config.ts  package-lock.json  package.json  staticwebapp.config.json  swa-cli.config.json
.claude/: settings.json
.claude/agents/: security-reviewer.md  terraform-reviewer.md
.claude/hooks/: block-env.py  typecheck.sh
.github/workflows/: azure-static-web-apps-calm-pebble-02423ed0f.yml  azure-static-web-apps-witty-sea-0fab1e70f.yml  backend-pr.yml  backend.yml  ci-cd.yml  deploy-api.yml  frontend.yml  infra-pr.yml  infra.yml  main_observable-decisions.yml
api/: .dockerignore  Dockerfile  function_app.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/storage/: __init__.py  azure_blob.py  base.py  gcs.py
api/tests/: conftest.py  test_models.py  test_routes.py  test_storage_azure.py
app/: .firebaserc  firebase.json  package-lock.json  package.json  swa-cli.config.json
app/src/: main.tsx
infra/: .gitignore  apim.tf  compute.tf  identity.tf  keyvault.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  private_endpoints.tf  resource_group.tf  storage.tf  terraform.tfvars  variables.tf
scripts/: setup-oauth-settings-slim.ps1  setup-oauth-settings.ps1
src/: App.tsx  auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: decision-form.tsx  decision-list.tsx  markdown-field.tsx  nav.tsx  options-editor.tsx  share-button.tsx  status-badge.tsx  tag-input.tsx
src/layouts/: AppLayout.tsx
src/lib/: api.ts
src/pages/: DecisionsPage.tsx  (+3 more)
(+38 files in other folders)
